# pymupdf-try

./: .gitignore  README.md  output.txt  pyproject.toml
src/: main.py
src/pymupdf_try/: __init__.py
