[project]
name = "pymupdf-try"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kou12345", email = "hi.0412.ko.2002@gmail.com" }
]
dependencies = [
    "pymupdf>=1.24.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pymupdf_try"]
